# gamenumber-gloss

./: .gitmodules  .project  .travis.yml  README.md  gamenumber-gloss.cabal  init-sandbox.sh
data/: not-delete.txt
src/View/: State.hs
