name:                gamenumber-gloss
version:             0.0.1
synopsis:            simple game
description:         GameNumber is simple game with AI players (gloss frontend)
license:             GPL-3
license-file:        LICENSE
author:              Evgeny Pashkin
maintainer:          epashkin@cognitive.ru
copyright:           (C) 2014 Evgeny Pashkin
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable gamenumber-gloss
  main-is:             Main.hs
  build-depends:       base >=4.6,
                       gamenumber,
                       random,
                       array,
                       containers,
                       mtl,
                       bytestring,
                       binary,
                       lens,
                       gloss
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
